Skip to content
GitLab
  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in / Register
  • xserver xserver
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 885
    • Issues 885
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 103
    • Merge requests 103
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • xorg
  • xserverxserver
  • Issues
  • #1024
Closed
Open
Created May 15, 2020 by José María Casanova Crespo@chemaContributor

modesetting: XRandR rotates leaks front_bo and GDM allocated resources

This issue was originally reported at "Pi4: Display goes blank / something inside the kernel or firmware crashes when running xrandr -o too often" https://github.com/raspberrypi/firmware/issues/1345

After running sequences of xrandr rotations Xserver fails displaying messages at kernel log like:

[ 845.945909] [drm:vc4_bo_create [vc4]] ERROR Failed to allocate from CMA:
[ 845.945923] [drm] dumb: 243016kb BOs (31)
[ 845.947141] [drm:vc4_bo_create [vc4]] ERROR Failed to allocate from CMA:
[ 845.947151] [drm] dumb: 243016kb BOs (31)

Depending of the memory of the RPI4 and the screen resolution a sequence of xrandr -o left;xrandr -o normal generates that fails and the server needs to be restarted to continue working.

After an analysis at the Mesa and DRM v3d drivers this seems to be a memory leak in xserver, that doesn't free the front_bo in some cases in the drmmode_xf86crtc_resize function.

I'm sending a MR to fix the issue tested in the xserver.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking